--- a/index.html
+++ b/index.html
@@ -133,12 +133,11 @@
             Odoslaním formulára vyjadrujete súhlas s&nbsp;našimi
             <span class="rc__font-weight-bold-red">Podmienkami používania</span>
           </p>
+          <div id="successMessage" class="successMessage">
+            Formulár bol úspešne odoslaný! Ďakujeme za registráciu.
+          </div>
         </form>
       </main>
-      <!-- ================================================ -->
-      <!-- ==================== Footer ==================== -->
-      <!-- ================================================ -->
-      <footer class="Footer"></footer>
     </div>
   </body>
 </html>
