--- a/form-success.html
+++ b/form-success.html
@@ -35,7 +35,7 @@
       <!-- ================================================ -->
       <header class="header">
         <h1 class="header__heading">Formular bol úspešne odoslaný!</h1>
-        <p class="header__description">Ďakujeme za Vašu registráciu!</p>
+        <p class="header__description">Ďakujeme za Vašu registráciu.</p>
       </header>
     </div>
   </body>
