--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- ================================================ -->
         <!-- ===================== Form ===================== -->
         <!-- ================================================ -->
-        <form id="form" class="form" onsubmit="return validateForm()">
+        <form id="form" class="form" action="#">
           <div id="form__box-first-name" class="form__box">
             <input
               type="text"
@@ -133,9 +133,6 @@
             Odoslaním formulára vyjadrujete súhlas s&nbsp;našimi
             <span class="rc__font-weight-bold-red">Podmienkami používania</span>
           </p>
-          <div id="successMessage" class="successMessage">
-            Formulár bol úspešne odoslaný! Ďakujeme za registráciu.
-          </div>
         </form>
       </main>
     </div>
