--- a/form-success.html
+++ b/form-success.html
@@ -34,7 +34,7 @@
       <!-- ==================== Header ==================== -->
       <!-- ================================================ -->
       <header class="header">
-        <h1 class="header__heading">Formular bol úspešne odoslaný!</h1>
+        <h1 class="header__heading">Formulár bol úspešne odoslaný!</h1>
         <p class="header__description">Ďakujeme za Vašu registráciu.</p>
       </header>
     </div>
